--- a/index.html
+++ b/index.html
@@ -1,33 +1,216 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | NFT preview card component</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  Equilibrium #3429
+    <title>Frontend Mentor | NFT preview card component</title>
 
-  Our Equilibrium collection promotes balance and calm.
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      * {
+        --soft-blue: hsl(215, 51%, 70%);
+        --cyan: hsl(178, 100%, 50%);
+        --cyan-transparant: hsla(178, 100%, 50%, 50%);
+        --main-bg-color: hsl(217, 54%, 11%);
+        --card-bg-color: hsl(216, 50%, 16%);
+        --line-color: hsl(215, 32%, 27%);
+        font-family: 'Outfit', sans-serif;
+        font-size: 18px;
+      }
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+        position: fixed;
+        bottom: 1rem;
+        left: 0;
+        right: 0;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
 
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
+      html,
+      body,
+      main {
+        width: 100%;
+        height: 100%;
+      }
+      body {
+        background-color: var(--main-bg-color);
+        color: white;
+      }
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+      .flex-container {
+        height: inherit;
+        width: inherit;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .card {
+        background-color: var(--card-bg-color);
+        width: 300px;
+        padding: 25px;
+        border-radius: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+      }
+      .card .nft-image-container {
+        position: relative;
+        width: 100%;
+        aspect-ratio: 1;
+        border-radius: 10px;
+        overflow: hidden;
+      }
+      .card .nft-image {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+      }
+      .card .nft-image-overlay {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background-color: var(--cyan-transparant);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        opacity: 0;
+      }
+      .card .nft-image-overlay:hover {
+        opacity: 100;
+      }
+
+      .card .nft-title {
+        font-size: 1.2rem;
+        font-weight: 600;
+        color: white;
+        text-decoration: none;
+        margin-top: 20px;
+      }
+      .card .nft-title:hover {
+        color: var(--cyan);
+      }
+      .card p {
+        font-weight: 300;
+        color: var(--soft-blue);
+      }
+
+      .auction-info {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 10px;
+      }
+      .auction-info img {
+        align-self: center;
+      }
+      .auction-info .price,
+      .auction-info .duration {
+        display: flex;
+        column-gap: 5px;
+      }
+      .auction-info .price p {
+        display: inline-block;
+        color: var(--cyan);
+        font-weight: 600;
+        margin: 0;
+      }
+      .auction-info .duration p {
+        display: inline-block;
+        margin: 0;
+      }
+
+      hr {
+        border: 0;
+        height: 1px;
+        width: inherit;
+        background-color: var(--line-color);
+      }
+
+      .creator {
+        display: flex;
+        align-items: center;
+        column-gap: 15px;
+      }
+      .creator img {
+        width: 40px;
+        border: 1px;
+        border-color: white;
+        border-style: solid;
+        border-radius: 100%;
+      }
+      .creator p {
+        font-weight: 300;
+      }
+
+      .creator a {
+        color: white;
+        text-decoration: none;
+      }
+      .creator a:hover {
+        color: var(--cyan);
+      }
+    </style>
+  </head>
+  <body>
+    <main>
+      <div class="flex-container">
+        <div class="card">
+          <a href="#" class="nft-image-container">
+            <img
+              class="nft-image"
+              src="./images/image-equilibrium.jpg"
+              alt="Image Equilibrium"
+            />
+            <div class="nft-image-overlay">
+              <img src="./images/icon-view.svg" alt="Image Overlay" />
+            </div>
+          </a>
+          <a class="nft-title" href="#">Equilibrium #3429</a>
+          <p>Our Equilibrium collection promotes balance and calm.</p>
+          <div class="auction-info">
+            <div class="price">
+              <img src="./images/icon-ethereum.svg" alt="" />
+              <p>0.041 ETH</p>
+            </div>
+            <div class="duration">
+              <img src="./images/icon-clock.svg" alt="" />
+              <p>3 days left</p>
+            </div>
+          </div>
+          <hr />
+          <div class="creator">
+            <img src="./images/image-avatar.png" alt="" />
+            <p>Creation of <a href="#" class="creator-name">Jules Wyvern</a></p>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="https://github.com/Gugg94">Gugg</a>.
+    </div>
+  </body>
 </html>
