--- a/index.html
+++ b/index.html
@@ -62,6 +62,20 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        position: relative;
+      }
+
+      .large-card-background {
+        padding: 15px 25px 50px 25px;
+        border-radius: 10%;
+        background-color: rgba(0, 0, 0, 0.05);
+      }
+      .small-card-background {
+        padding: 15px 25px 10px 25px;
+        margin-bottom: 10px;
+        border-radius: 10%;
+        background-color: rgba(0, 0, 0, 0.05);
+        transform: translateY(40px);
       }
 
       .card {
@@ -72,6 +86,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
+        transform: translateY(-40px);
       }
       .card .nft-image-container {
         position: relative;
@@ -174,33 +189,39 @@
   <body>
     <main>
       <div class="flex-container">
-        <div class="card">
-          <a href="#" class="nft-image-container">
-            <img
-              class="nft-image"
-              src="./images/image-equilibrium.jpg"
-              alt="Image Equilibrium"
-            />
-            <div class="nft-image-overlay">
-              <img src="./images/icon-view.svg" alt="Image Overlay" />
+        <div class="large-card-background">
+          <div class="small-card-background">
+            <div class="card">
+              <a href="#" class="nft-image-container">
+                <img
+                  class="nft-image"
+                  src="./images/image-equilibrium.jpg"
+                  alt="Image Equilibrium"
+                />
+                <div class="nft-image-overlay">
+                  <img src="./images/icon-view.svg" alt="Image Overlay" />
+                </div>
+              </a>
+              <a class="nft-title" href="#">Equilibrium #3429</a>
+              <p>Our Equilibrium collection promotes balance and calm.</p>
+              <div class="auction-info">
+                <div class="price">
+                  <img src="./images/icon-ethereum.svg" alt="" />
+                  <p>0.041 ETH</p>
+                </div>
+                <div class="duration">
+                  <img src="./images/icon-clock.svg" alt="" />
+                  <p>3 days left</p>
+                </div>
+              </div>
+              <hr />
+              <div class="creator">
+                <img src="./images/image-avatar.png" alt="" />
+                <p>
+                  Creation of <a href="#" class="creator-name">Jules Wyvern</a>
+                </p>
+              </div>
             </div>
-          </a>
-          <a class="nft-title" href="#">Equilibrium #3429</a>
-          <p>Our Equilibrium collection promotes balance and calm.</p>
-          <div class="auction-info">
-            <div class="price">
-              <img src="./images/icon-ethereum.svg" alt="" />
-              <p>0.041 ETH</p>
-            </div>
-            <div class="duration">
-              <img src="./images/icon-clock.svg" alt="" />
-              <p>3 days left</p>
-            </div>
-          </div>
-          <hr />
-          <div class="creator">
-            <img src="./images/image-avatar.png" alt="" />
-            <p>Creation of <a href="#" class="creator-name">Jules Wyvern</a></p>
           </div>
         </div>
       </div>
